Fix: Refactor Temp and Permanent Delete
