# swagger_config.yaml
@@ -269,7 +269,7 @@ paths:
         200:
           description: Shop logs downloaded successfully
 
-  /api/product/{id}:
+  /api/product/delete_product/{id}:
     patch:
       tags:
         - Product
@@ -289,19 +289,49 @@ paths:
                 type: string
                 example: "temporary"
       responses:
-        200:
+        204:
           description: Product temporarily deleted
           schema:
             type: object
             properties:
               message:
                 type: string
-                example: "Product temporarily deleted"
+                example: No content
         404:
           description: Invalid Product
           schema:
             $ref: '#/definitions/Error'
 
+    delete:
+      tags:
+        - Product
+      summary: Permanently delete a product by ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+      responses:
+        204:
+          description: Product permanently deleted
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+                example: "Product permanently deleted"
+        400:
+          description: Bad Request - Invalid ID Data-Type
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: Product not found
+          schema:
+            $ref: '#/definitions/Error'
+        500:
+          description: Server Error
+          schema:
+            $ref: '#/definitions/Error'
   /api/product/download/log:
     get:
       tags:
@@ -316,7 +346,7 @@ paths:
                 type: string
                 format: binary
 
-  /api/restore_product/{product_id}:
+  /api/product/restore_product/{product_id}:
     patch:
       tags:
         - Product
